# gmid_gui

./: .gitignore  data_compression.ipynb  data_processing_spectre.ipynb  pyproject.toml
compressed_data/: nfet_1u_5u_test.npz
gmid_gui/: __init__.py  mos_dictionary.py  plotting.py  utils.py
gmid_gui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
raw_data/: nfet_1u_5u_test.csv
